@@ -27,6 +27,9 @@ response.
 <p>
 For more information on Bluelog, please visit its page on DigiFAIL:
 <center><a href="http://www.digifail.com/software/bluelog.shtml" target="_blank" style="color:#FF9C27">www.digifail.com/software/bluelog.shtml</a></center> 
+<p>
+You can get the latest source, follow development, and submit issues/patches on Bluelog's GitHub page:
+<center><a href="https://github.com/MS3FGX/Bluelog" target="_blank" style="color:#FF9C27">https://github.com/MS3FGX/Bluelog</a></center> 
 </div>
 </body>
 </html>
