@@ -17,7 +17,7 @@
 <!-- Content usually goes here-->
 <div class="footer">
 <h4>	
-<a href="about.html" onClick="window.open('about.html','About','toolbar=no,location=no,directories=no,status=no,menubar=no,scrollbars=no,resizable=no,width=500,height=330,left=50,top=50'); return false;">About</a>
+<a href="about.html" onClick="window.open('about.html','About','toolbar=no,location=no,directories=no,status=no,menubar=no,scrollbars=no,resizable=no,width=500,height=410,left=50,top=50'); return false;">About</a>
 &nbsp;&nbsp;
 <a href="contact.html" onClick="window.open('contact.html','Contact','toolbar=no,location=no,directories=no,status=no,menubar=no,scrollbars=no,resizable=no,width=500,height=510,left=50,top=50'); return false;">Contact</a>
 </h4>
