@@ -1,3 +1,8 @@
+10/14/13:
+	Add support for additional CSS elements in Live UI
+	Add link to GitHub page in Live "About"
+	LCARS looking much better
+
 10/13/13:
 	New default theme for Bluelog Live, WIP
 	Improvements to LCARS theme
